# Premier-league-prediction-model

./: README.md
epl predictor/: README.md  __init__.py  backtester.py  config.py  config.yaml  data_loader.py  epl_models_v7_biasfix.joblib  features.py  inference.py  init.py  main.py  models.py  pyproject.toml  requirements.txt
epl predictor/cache/fbref/: fpl_bootstrap_cache.json
epl predictor/tests/: test_features.py  test_math_logic.py
